# report-q-sarang

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  evidence-pipeline.yml
config/: blog_series.yaml  claim_rules.yaml  research_insights.yaml  search_queries.yaml  wordpress.yaml
content/blog/: README.md  how-to-read-cordycepin-research.md  qsarang-jewang-damgeumju.md
content/research/: advances-in-biosynthesis-and-metabolic-engineeri-2024-903790.md  an-acetyl-coa-gated-metabolic-checkpoint-links-p-2026-042030.md  an-immunomodulatory-mushroom-cordyceps-militaris-2026-41432716.md  beneficial-effect-of-cordyceps-militaris-on-exer-2020-33312018.md  construction-of-cordycepin-high-production-strai-2022-459233.md  cordyceps-militaris-reduces-oxidative-stress-and-2022-36009221.md  cordyceps-polysaccharides-a-review-of-their-immu-2024-39519748.md  efficient-production-of-cordycepin-in-engineered-2026-946402.md  exploration-of-the-potential-utilization-value-i-2026-444510.md  high-level-production-of-cordycepin-by-the-xylos-2023-734485.md  immunomodulation-and-protective-effects-of-cordy-2024-39590481.md  increased-cordycepin-production-in-yarrowia-lipo-2023-791366.md  influence-of-culture-conditions-on-bioactive-com-2025-097576.md  lipid-lowering-effect-of-cordycepin-3-deoxyadeno-2011-21882527.md  (+5 more)
data/: claims_map.csv
docs/: BLOG_PUBLISH_CHECKLIST.md  COMPLIANCE.md  MARKETING_EVIDENCE_BRIEF.md  PROCESS.md  WORDPRESS_SETUP.md
web/: .gitignore  DEPLOY.md  README.md  package-lock.json  package.json
(+926 files in other folders)
